add rota order e chaves estrageiras p/ rotas relacionadas
